# helion

./: .gitignore  pyproject.toml
.github/: matrix.json
.github/ci_commit_pins/: torch_tpu.txt
.github/dashboard/: build_dashboard_data.py  index.html
.github/workflows/: benchmark.yml  benchmark_dispatch.yml  benchmark_nightly.yml  benchmark_tpu.yml  benchmark_tpu_nightly.yml  lint.yml  test.yml
benchmarks/: run_tpu.py
docs/: aot_autotuning.md  deployment_autotuning.md  index.md
examples/: README.rst  attention.py  epilogue_subtiling.py  fp8_gemm.py  jsd.py  kl_div.py  rms_norm.py
helion/: _hardware.py  _testing.py  exc.py
helion/_compiler/: ast_extension.py  aten_lowering.py  backend.py  compile_environment.py  device_function.py  device_ir.py  epilogue_subtiling.py  host_function.py  indexing_strategy.py  inductor_lowering.py  kernel_compiler.py  matmul_utils.py  program_id.py  reduction_strategy.py  roll_reduction.py  source_location.py  tile_dispatch.py  tile_strategy.py
helion/_compiler/_inductor/: template_buffer.py
helion/_compiler/autotuner_heuristics/: __init__.py  common.py  cute.py  registry.py  triton.py
helion/_compiler/cute/: argreduce.py  clc_helpers.py  cute_epilogue.py  cute_fx_walk.py  cute_mma.py  cute_reshape.py  cutedsl_compat.py  layout.py  layout_change.py  layout_propagation.py  layout_rules.py  matmul_fallback.py  matmul_utils.py  reduce_helpers.py  strategies.py  tcgen05_constants.py
helion/_compiler/pallas/: __init__.py  plan_tiling.py
helion/autotuner/: __init__.py  aot_cache.py  base_search.py  benchmark_provider.py  block_id_sequence.py  config_generation.py  config_spec.py  differential_evolution.py  effort_profile.py  external.py  heuristic_generator.py  llm_search.py  llm_seeded_lfbo.py  pattern_search.py  random_search.py
helion/autotuner/llm/: __init__.py  configs.py  feedback.py  parsing.py  prompting.py  transport.py
helion/experimental/: aot_runner.py  autodiff.py
helion/language/: _gelu_tanh_approx.py  _tracing_ops.py  atomic_ops.py  matmul_ops.py  memory_ops.py  view_ops.py
helion/runtime/: __init__.py  kernel.py  settings.py
pretuned_kernels/: README.md
pretuned_kernels/cross_entropy/: _helion_aot_cross_entropy_cuda_sm100.py  cross_entropy.py
pretuned_kernels/layer_norm/: _helion_aot_layer_norm_cuda_sm100.py  layer_norm.py
pretuned_kernels/rms_norm/: _helion_aot_rms_norm_cuda_sm100.py  rms_norm.py
pretuned_kernels/softmax/: _helion_aot_softmax_cuda_sm100.py  softmax.py
pretuned_kernels/vector_add/: _helion_aot_vector_add_cuda_sm100.py  vector_add.py
scripts/: autoreview.py  install_cute.sh  make-tpu-wheels.sh
test/: test_aot_autotuning.py  test_atomic_ops.py  test_autodiff.py  test_autotuner.py  test_autotuner_heuristics.py  test_benchmark_worker.py  test_best_available.py  test_cache.py  test_cute_backend.py  test_cute_layout.py  test_cute_lowerings.py  test_debug_utils.py  test_dot_requirements.py  test_epilogue_subtiling.py  test_errors.py  test_examples.py  test_generate_ast.py  test_grid.py  test_indexing.py  test_int64_indexing.py  test_jagged_tile.py  test_loops.py  test_misc.py  test_pallas.py  test_pretuned_kernels.py  test_reductions.py  test_stack_tensor.py  test_tensor_descriptor.py  test_tensor_numel_constraints.py
test/golden/: __init__.py  _tcgen05_role_local_monolithic_4096_bf16_kernel.py  tcgen05_role_local_monolithic_4096_bf16.py.expected
